--- a/src/Components/Galeria.css
+++ b/src/Components/Galeria.css
@@ -1,10 +1,14 @@
 .title-image {
-  padding-top: 1rem;
+  padding-top: 2rem;
+  font-size: 3em;
+  color: white;
 }
 
 .mini-descripcion {
   text-align: center;
   padding: 0 1rem;
+  font-size: 1.5em;
+  color: white;
 }
 
 .section-image {
