--- a/src/Components/Presentacion.css
+++ b/src/Components/Presentacion.css
@@ -1,11 +1,13 @@
 .container-servicios {
-  background-color: white;
+  /* background-color: black; */
   padding-bottom: 3rem;
   padding-top: 2rem;
   margin-top: 2rem;
   margin-right: 3rem;
-  margin-left: 3rem;
+  margin-left: 10rem;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .seccion-servicios {
@@ -15,6 +17,7 @@
 }
 
 .articulo-servicios {
+  background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
