--- a/src/Components/Redes.css
+++ b/src/Components/Redes.css
@@ -1,8 +1,14 @@
 .social {
-  position: fixed; /* Hacemos que la posición en pantalla sea fija para que siempre se muestre en pantalla*/
-  left: 0; /* Establecemos la barra en la izquierda */
-  top: 23rem; /* Bajamos la barra 200px de arriba a abajo */
-  z-index: 2000; /* Utilizamos la propiedad z-index para que no se superponga algún otro elemento como sliders, galerías, etc */
+  position: fixed;
+  left: 0;
+  top: 23rem;
+  z-index: 2000;
+  opacity: 0; /* Inicialmente oculto */
+  transition: opacity 0.3s ease-in-out; /* Transición suave */
+}
+
+.social.visible {
+  opacity: 1; /* Visible cuando tiene la clase 'visible' */
 }
 
 ul {
@@ -25,15 +31,17 @@ svg {
   text-decoration: none;
   -webkit-transition: all 500ms ease;
   -o-transition: all 500ms ease;
-  transition: all 500ms ease; /* Establecemos una transición a todas las propiedades */
+  transition: all 500ms ease;
 }
 
 .social ul li .icon-facebook {
   background: #3b5998;
-} /* Establecemos los colores de cada red social, aprovechando su class */
+}
+
 .social ul li .icon-twitter {
   background: #00abf0;
 }
+
 .social ul li .icon-instagra {
   background-color: rgb(254, 218, 117);
   background-image: linear-gradient(
@@ -43,13 +51,19 @@ svg {
     rgb(150, 47, 191) 100%
   );
 }
+
 .social ul li .icon-pinterest {
   background: #ae181f;
 }
+
 .social ul li .icon-mail {
   background: #666666;
 }
 
 .social ul li a:hover {
-  padding: 10px 30px; /* Hacemos mas grande el espacio cuando el usuario pase el mouse */
+  padding: 10px 30px;
+}
+
+.redes {
+  display: flex;
 }
