--- a/src/Components/ServiciosDestacados.css
+++ b/src/Components/ServiciosDestacados.css
@@ -1,10 +1,15 @@
+.container-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container-servicios {
-  background-color: white;
   padding-bottom: 3rem;
   padding-top: 2rem;
   margin-top: 2rem;
-  margin-right: 3rem;
-  margin-left: 3rem;
+  margin-right: -5rem;
+  margin-left: 4rem;
   display: flex;
 }
 
@@ -15,12 +20,13 @@
 }
 
 .articulo-servicios {
+  background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding-right: 10rem;
-  padding-left: 10rem;
+  padding-right: 8rem;
+  padding-left: 13rem;
   animation: EntrarDesdeIzquierda 0.9s ease;
 }
 
@@ -28,12 +34,14 @@
   padding-bottom: 0.5rem;
   font-size: 5em;
   font-weight: bold;
+  color: white;
 }
 
 .parrafo-servicio-precio {
   font-size: 1.5em;
   line-height: 2em;
   font-weight: bolder;
+  color: white;
 }
 
 .div-container-image {
